force-app/main/default/objects/Legal_Notice__c/Legal_Notice__c.object-meta.xml
<CustomObject>
    <label>Legal Notice</label>
    <nameField>
        <displayFormat>LN-{000000}</displayFormat>
        <label>Legal Notice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Notices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>