force-app/main/default/objects/Legal_Notice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Legal Notices</relationshipLabel>
    <relationshipName>Legal_Notices</relationshipName>
    <type>Lookup</type>
</CustomField>