force-app/main/default/objects/Legal_Notice__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Legal Notices</relationshipLabel>
    <relationshipName>Legal_Notices</relationshipName>
    <type>Lookup</type>
</CustomField>