force-app/main/default/objects/Legal_Notice__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>FinancialAccount</referenceTo>
    <relationshipLabel>Legal Notices</relationshipLabel>
    <relationshipName>Legal_Notices</relationshipName>
    <type>Lookup</type>
</CustomField>